--- a/css/source/custom/layouts.scss
+++ b/css/source/custom/layouts.scss
@@ -90,18 +90,47 @@ body.reveal-ready {
     margin: 0;
   }
 
-section img {
-  position: absolute;
-  top: 0; left: 0;
-  right: 0; bottom: 0;
-  margin: auto;
-  max-width: 95%;
-  max-height: 100%;
-  object-fit: contain;
-}
+  section img[data-imagefit] {
+    position: absolute;
+    top: 0; left: 0;
+    right: 0; bottom: 0;
+    margin: auto;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
 
   .slide-attribution {
     display: none;
+  }
+
+  figure.captioned-image {
+    display: block;
+    position: absolute;
+    top: 0; left: 0;
+    right: 0; bottom: 0;
+    margin: 1em 0;
+    max-width: 95%;
+    max-height: 95%;
+    text-align: center;
+
+    img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+
+    figcaption {
+      font-size: 0.8rem;
+      margin-top: -0.5em;
+      padding: 0.4em 0.8em;
+      border-radius: 4px;
+      display: inline-block;
+      max-width: 90%;
+    }
   }
 
 }
@@ -124,7 +153,7 @@ section img {
 }
 
 #fixed-overlay-wrapper .attribution {
-  display: inline-block;
+  display: block;
   float: left;
   padding-bottom: 0.6em;
   padding-top: 0.6em;
